--- a/fr/index.html
+++ b/fr/index.html
@@ -12,13 +12,13 @@
         content="générateur d'ambigramme, ambigramme 3d, tatouage ambigramme, générateur gratuit, créer un ambigramme, fichier stl, impression 3d, générateur deux prénoms" />
 
     <!-- Hreflang tags for multilingual SEO -->
-    <link rel="alternate" hreflang="x-default" href="https://www.ambigramgenerator.me/fr/" />
+    <link rel="alternate" hreflang="x-default" href="https://www.ambigramgenerator.me/" />
     <link rel="alternate" hreflang="en" href="https://www.ambigramgenerator.me/" />
-    <link rel="alternate" hreflang="fr" href="https://www.ambigramgenerator.me/fr/" />
+    <link rel="alternate" hreflang="fr" href="https://www.ambigramgenerator.me/fr" />
 
     <meta name="google-adsense-account" content="ca-pub-3383070348689557" />
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
-    <link rel="canonical" href="https://www.ambigramgenerator.me/" />
+    <link rel="canonical" href="https://www.ambigramgenerator.me/fr" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         // Configured to match your existing style
@@ -710,6 +710,9 @@
                 <a href="/what-is-ambigram" class="text-dark hover:text-primary font-medium transition-colors">Qu'est-ce
                     qu'un Ambigramme</a>
                 <a href="#faq" class="font-medium transition-colors">FAQ</a>
+                <a href="/" class="block py-1 px-4 text-dark hover:bg-gray-100 font-semibold text-primary">
+                    <i class="fa fa-globe mr-2"></i>English (EN)
+                </a>
                 <a href="#generator"
                     class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Commencer</a>
             </nav>
@@ -725,6 +728,9 @@
                 Ambigramme</a>
             <a href="#faq" class="block py-1 px-4 text-dark hover:bg-gray-100">FAQ</a>
             <a href="/privacy" class="block py-1 px-4 text-dark hover:bg-gray-100">Confidentialité</a>
+            <a href="/" class="block py-1 px-4 text-dark hover:bg-gray-100 font-semibold text-primary">
+                <i class="fa fa-globe mr-2"></i>English (FR)
+            </a>
             <div class="p-2">
                 <a href="#generator"
                     class="block text-center bg-primary text-white px-4 py-1 rounded-full hover:bg-blue-600 transition-colors w-full">Commencer</a>
