--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   </script>
 
   <!-- Only preload essential scripts, not Three.js -->
-  <link rel="preload" href="./assets/jqery.min-hYMwZ4vv.js" as="script" />
+  <link rel="preload" href="/assets/jqery.min-hYMwZ4vv.js" as="script" />
 
 
   <!-- 3. Load CSS. Your main CSS is loaded directly. Others are loaded asynchronously to prevent render-blocking. -->
@@ -716,9 +716,9 @@
         <img src="/logo.png" alt="ambigramgenerator logo" class="h-10 md:h-12">
       </a>
       <nav id="main-nav" class="hidden md:flex items-center space-x-6">
-        <a href="/generator.html" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
-        <a href="/3d-generator.html" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
-        <a href="/what-is-ambigram.html" class="text-dark hover:text-primary font-medium transition-colors">What is an
+        <a href="/generator" class="text-dark hover:text-primary font-medium transition-colors">2D Generator</a>
+        <a href="/3d-generator" class="text-dark hover:text-primary font-medium transition-colors">3D Generator</a>
+        <a href="/what-is-ambigram" class="text-dark hover:text-primary font-medium transition-colors">What is an
           Ambigram</a>
 
         <!-- Tutorial Dropdown - Adjusted href to prevent '#' error -->
@@ -733,38 +733,37 @@
           </a>
           <div class="absolute left-1/2 -translate-x-1/2 hidden group-hover:block bg-white shadow-lg rounded-md space-y-2 w-48 py-2 z-20 border border-gray-100 
     -mt-1"> <!-- 调整margin-top为负值，使其与父菜单重叠 -->
-            <a href="/tutorial/multi-word-guide.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Multi-Word
+            <a href="/tutorial/multi-word-guide" class="block px-4 py-2 text-dark hover:bg-gray-100">Multi-Word
               Guide</a>
-            <a href="/tutorial/tattoo-design.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Tattoo Design
+            <a href="/tutorial/tattoo-design" class="block px-4 py-2 text-dark hover:bg-gray-100">Tattoo Design
               Guide</a>
-            <a href="/tutorial/two-name-ambigram.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Two-Name
+            <a href="/tutorial/two-name-ambigram" class="block px-4 py-2 text-dark hover:bg-gray-100">Two-Name
               Ambigram</a>
-            <a href="/guide/2d-vs-3d-design.html" class="block px-4 py-2 text-dark hover:bg-gray-100">2D vs 3D
-              Design</a>
+            <a href="/guide/2d-vs-3d-design" class="block px-4 py-2 text-dark hover:bg-gray-100">2D vs 3D Design</a>
 
-            <a href="/guide/flipscript-principles.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Flipscript
+            <a href="/guide/flipscript-principles" class="block px-4 py-2 text-dark hover:bg-gray-100">Flipscript
               Principles</a>
-            <a href="/guide/ambigram-history-art.html" class="block px-4 py-2 text-dark hover:bg-gray-100">Ambigram
-              History
+            <a href="/guide/ambigram-history-art" class="block px-4 py-2 text-dark hover:bg-gray-100">Ambigram History
               and Art</a>
-            <a href="/guide/ultimate-free-generator.html" class="block px-4 py-2 text-dark hover:bg-gray-100">
+            <a href="/guide/ultimate-free-generator" class="block px-4 py-2 text-dark hover:bg-gray-100">
               Ultimate Free Generator</a>
-            <a href="/guide/best-online-tools.html" class="block px-4 py-2 text-dark hover:bg-gray-100">
+            <a href="/guide/best-online-tools" class="block px-4 py-2 text-dark hover:bg-gray-100">
               Best Online Tools</a>
-            <a href="/guide/name-generator-secrets.html" class="block px-4 py-2 text-dark hover:bg-gray-100">
+            <a href="/guide/name-generator-secrets" class="block px-4 py-2 text-dark hover:bg-gray-100">
               Name Generator Secrets</a>
-            <a href="/guide/advanced-3d-controls.html" class="block px-4 py-2 text-dark hover:bg-gray-100">
+            <a href="/guide/advanced-3d-controls" class="block px-4 py-2 text-dark hover:bg-gray-100">
               Advanced 3D Controls</a>
           </div>
         </div>
 
-        <a href="/tattoo-design.html" class="font-medium transition-colors">Design Guides</a>
+        <a href="/tattoo-design" class="font-medium transition-colors">Design Guides</a>
         <!-- Check this href as well, if it's meant to be a scroll-to link -->
-        <a href="/generator.html"
+        <a href="/generator"
           class="bg-primary text-white px-4 py-2 rounded-full hover:bg-blue-600 transition-colors">Start Creating</a>
-        <a href="/privacy.html" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
-        <a href="/terms.html" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
-        <a href="/about.html" class="text-dark hover:text-primary font-medium transition-colors">About Us</a>
+        <a href="/privacy" class="text-dark hover:text-primary font-medium transition-colors">Privacy Policy</a>
+        <a href="/terms" class="text-dark hover:text-primary font-medium transition-colors">Terms of Service</a>
+        <a href="/about" class="text-dark hover:text-primary font-medium transition-colors">About Us</a>
+        <!-- Language Switcher (Desktop) -->
         <a href="/fr"
           class="text-dark hover:text-primary font-bold transition-colors flex items-center gap-1 border border-gray-300 rounded px-2 py-1 text-sm"
           aria-label="Passer en français">
@@ -782,9 +781,9 @@
     </div>
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
-      <a href="/generator.html" class="block py-1 px-4 text-dark hover:bg-gray-100">2D Generator</a>
-      <a href="/3d-generator.html" class="block py-1 px-4 text-dark hover:bg-gray-100">3D Generator</a>
-      <a href="/what-is-ambigram.html" class="block py-1 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
+      <a href="/generator" class="block py-1 px-4 text-dark hover:bg-gray-100">2D Generator</a>
+      <a href="/3d-generator" class="block py-1 px-4 text-dark hover:bg-gray-100">3D Generator</a>
+      <a href="/what-is-ambigram" class="block py-1 px-4 text-dark hover:bg-gray-100">What is an Ambigram</a>
 
       <!-- Mobile Tutorial Accordion/Dropdown -->
       <div class="border-b border-gray-200">
@@ -797,34 +796,36 @@
           </svg>
         </button>
         <div id="mobile-tutorial-links">
-          <a href="/tutorial/multi-word-guide.html" class="block px-8 py-1 text-dark hover:bg-gray-100">Multi-Word
+          <a href="/tutorial/multi-word-guide" class="block px-8 py-1 text-dark hover:bg-gray-100">Multi-Word
             Guide</a>
           <a href="/tutorial/tattoo-design" class="block px-8 py-1 text-dark hover:bg-gray-100">Tattoo Design
             Guide</a>
-          <a href="/tutorial/two-name-ambigram.html" class="block px-8 py-1 text-dark hover:bg-gray-100">Two-Name
+          <a href="/tutorial/two-name-ambigram" class="block px-8 py-1 text-dark hover:bg-gray-100">Two-Name
             Ambigram</a>
-          <a href="/guide/2d-vs-3d-design.html" class="block px-8 py-1 text-dark hover:bg-gray-100">2D vs 3D Design</a>
+          <a href="/guide/2d-vs-3d-design" class="block px-8 py-1 text-dark hover:bg-gray-100">2D vs 3D Design</a>
 
-          <a href="/guide/flipscript-principles.html" class="block px-8 py-1 text-dark hover:bg-gray-100">Flipscript
+          <a href="/guide/flipscript-principles" class="block px-8 py-1 text-dark hover:bg-gray-100">Flipscript
             Principles</a>
-          <a href="/guide/ambigram-history-art.html" class="block px-8 py-1 text-dark hover:bg-gray-100">Ambigram
-            History
+          <a href="/guide/ambigram-history-art" class="block px-8 py-1 text-dark hover:bg-gray-100">Ambigram History
             and Art</a>
-          <a href="/guide/ultimate-free-generator.html" class="block px-8 py-1 text-dark hover:bg-gray-100">
+          <a href="/guide/ultimate-free-generator" class="block px-8 py-1 text-dark hover:bg-gray-100">
             Ultimate Free Generator</a>
-          <a href="/guide/best-online-tools.html" class="block px-8 py-1 text-dark hover:bg-gray-100">
+          <a href="/guide/best-online-tools" class="block px-8 py-1 text-dark hover:bg-gray-100">
             Best Online Tools</a>
-          <a href="/guide/name-generator-secrets.html" class="block px-8 py-1 text-dark hover:bg-gray-100">
+          <a href="/guide/name-generator-secrets" class="block px-8 py-1 text-dark hover:bg-gray-100">
             Name Generator Secrets</a>
-          <a href="/guide/advanced-3d-controls.html" class="block px-8 py-1 text-dark hover:bg-gray-100">
+          <a href="/guide/advanced-3d-controls" class="block px-8 py-1 text-dark hover:bg-gray-100">
             Advanced 3D Controls</a>
 
         </div>
       </div>
 
-      <a href="/tattoo-design.html" class="block py-1 px-4 text-dark hover:bg-gray-100">Design Guides</a>
-      <a href="/privacy.html" class="block py-1 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
-      <a href="/terms.html" class="block py-1 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
+      <a href="/tattoo-design" class="block py-1 px-4 text-dark hover:bg-gray-100">Design Guides</a>
+      <a href="/privacy" class="block py-1 px-4 text-dark hover:bg-gray-100">Privacy Policy</a>
+      <a href="/terms" class="block py-1 px-4 text-dark hover:bg-gray-100">Terms of Service</a>
+      <a href="/fr" class="block py-1 px-4 text-dark hover:bg-gray-100 font-semibold text-primary">
+        <i class="fa fa-globe mr-2"></i>Français (FR)
+      </a>
       <div class="p-2">
         <a href="#generator"
           class="block text-center bg-primary text-white px-4 py-1 rounded-full hover:bg-blue-600 transition-colors w-full">Start
@@ -1539,10 +1540,9 @@
           <div class="text-lg font-semibold mb-4 text-white">Product</div>
           <ul class="space-y-3">
             <li><a href="/" class="text-gray-400 hover:text-white transition-colors text-sm">Home</a></li>
-            <li><a href="/generator.html" class="text-gray-400 hover:text-white transition-colors text-sm">2D
-                Generator</a>
+            <li><a href="/generator" class="text-gray-400 hover:text-white transition-colors text-sm">2D Generator</a>
             </li>
-            <li><a href="/3d-generator.html" class="text-gray-400 hover:text-white transition-colors text-sm">3D
+            <li><a href="/3d-generator" class="text-gray-400 hover:text-white transition-colors text-sm">3D
                 Generator</a></li>
 
           </ul>
@@ -1552,10 +1552,10 @@
           <!-- Changed from H4 to Div to reduce H-tag dilution -->
           <div class="text-lg font-semibold mb-4 text-white">Guides</div>
           <ul class="space-y-3">
-            <li><a href="/what-is-ambigram.html" class="text-gray-400 hover:text-white transition-colors text-sm">What
+            <li><a href="/what-is-ambigram" class="text-gray-400 hover:text-white transition-colors text-sm">What
                 is an Ambigram</a></li>
 
-            <li><a href="/tattoo-design.html" class="text-gray-400 hover:text-white transition-colors text-sm"> Design
+            <li><a href="/tattoo-design" class="text-gray-400 hover:text-white transition-colors text-sm"> Design
                 Guide</a></li>
 
           </ul>
@@ -1564,28 +1564,26 @@
           <!-- Changed from H4 to Div to reduce H-tag dilution -->
           <div class="text-lg font-semibold mb-4 text-white">Tutorial</div>
           <ul class="space-y-3">
-            <li><a href="/tutorial/multi-word-guide.html"
+            <li><a href="/tutorial/multi-word-guide"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Multi-Word Ambigram</a></li>
-            <li><a href="/tutorial/tattoo-design.html"
+            <li><a href="/tutorial/tattoo-design"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Tattoo Design Guide</a></li>
-            <li><a href="/tutorial/two-name-ambigram.html"
+            <li><a href="/tutorial/two-name-ambigram"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Two-Name Ambigram</a></li>
-            <li><a href="/guide/2d-vs-3d-design.html"
-                class="text-gray-400 hover:text-white transition-colors text-sm">2D vs
+            <li><a href="/guide/2d-vs-3d-design" class="text-gray-400 hover:text-white transition-colors text-sm">2D vs
                 3D Design</a></li>
-            <li><a href="/guide/flipscript-principles.html"
+            <li><a href="/guide/flipscript-principles"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Flipscript Principles</a></li>
-            <li><a href="/guide/ambigram-history-art.html"
+            <li><a href="/guide/ambigram-history-art"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Ambigram History and Art</a></li>
-            <li><a href="/guide/ultimate-free-generator.html"
+            <li><a href="/guide/ultimate-free-generator"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Ultimate Free Generator</a></li>
-            <li><a href="/guide/best-online-tools.html"
-                class="text-gray-400 hover:text-white transition-colors text-sm">Best
+            <li><a href="/guide/best-online-tools" class="text-gray-400 hover:text-white transition-colors text-sm">Best
                 Online Tools</a></li>
-            <li><a href="/guide/name-generator-secrets.html"
+            <li><a href="/guide/name-generator-secrets"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Name
                 Generator Secrets</a></li>
-            <li><a href="/guide/advanced-3d-controls.html"
+            <li><a href="/guide/advanced-3d-controls"
                 class="text-gray-400 hover:text-white transition-colors text-sm">Advanced
                 3D Controls</a></li>
           </ul>
@@ -1598,17 +1596,14 @@
           <!-- Changed from H4 to Div to reduce H-tag dilution -->
           <div class="text-lg font-semibold mb-4 text-white">Support</div>
           <ul class="space-y-3">
-            <li><a href="/faq.html" class="text-gray-400 hover:text-white transition-colors text-sm">FAQ</a></li>
-            <li><a href="/privacy.html" class="text-gray-400 hover:text-white transition-colors text-sm">Privacy
-                Policy</a>
+            <li><a href="/faq" class="text-gray-400 hover:text-white transition-colors text-sm">FAQ</a></li>
+            <li><a href="/privacy" class="text-gray-400 hover:text-white transition-colors text-sm">Privacy Policy</a>
             </li>
-            <li><a href="/terms.html" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of
-                Service</a>
+            <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors text-sm">Terms of Service</a>
             </li>
-            <li><a href="/about.html" class="text-gray-400 hover:text-white transition-colors text-sm">About
+            <li><a href="/about" class="text-gray-400 hover:text-white transition-colors text-sm">About
                 Us</a></li>
-            <li><a href="/feedback.html" class="text-gray-400 hover:text-white transition-colors text-sm">Feedback</a>
-            </li>
+            <li><a href="/feedback" class="text-gray-400 hover:text-white transition-colors text-sm">Feedback</a></li>
           </ul>
         </div>
       </div>
@@ -2228,6 +2223,15 @@
         const visitorId = result.visitorId
         console.log(visitorId)
       })
+  </script>
+  <script>
+    document.getElementById('mobile-menu-btn').addEventListener('click', function () {
+      document.getElementById('mobile-menu').classList.toggle('hidden');
+    });
+    function toggleMobileTutorial() {
+      document.getElementById('mobile-tutorial-links').classList.toggle('hidden');
+      document.getElementById('mobile-tutorial-arrow').classList.toggle('rotate-180');
+    }
   </script>
 </body>
 
