--- a/generator.html
+++ b/generator.html
@@ -204,7 +204,7 @@
           reflective, and <strong>two-name ambigrams</strong>. Get your
           high-resolution PNG or SVG for free.
         </p>
-        <a href="/3d-generator"
+        <a href="#generator-tool"
           class="bg-secondary text-white px-8 py-3 rounded-full text-lg font-semibold hover:bg-green-600 hover:-translate-y-1 transition-all duration-300 shadow-lg hover:shadow-xl inline-flex items-center gap-2">
           <i class="fa fa-magic"></i> Start Designing Now
         </a>
