--- a/3d-generator.html
+++ b/3d-generator.html
@@ -193,7 +193,7 @@
                 <p class="text-xl text-gray-300 max-w-3xl mx-auto mb-8">Create stunning, interactive 3D ambigrams for 3D
                     printing. Download print-ready <strong>STL files</strong> or animated <strong>GIFs</strong>
                     instantly and for free.</p>
-                <a href="/3d-generator"
+                <a href="/#generator"
                     class="inline-block bg-primary text-white px-8 py-4 rounded-full text-lg font-semibold hover:bg-blue-600 hover:-translate-y-1 transition-all duration-300 shadow-lg shadow-blue-500/20">
                     <i class="fa fa-magic mr-2"></i> Start Generating Now
                 </a>
